--- a/views/user/editUser.hbs
+++ b/views/user/editUser.hbs
@@ -63,8 +63,7 @@
             <div>
                 <label for="username">UserName</label>
                 <div>
-                    <input type="text" id="username" value="{{account.username}}" readonly required class="input_style"
-                        value="namhoai" />
+                    <input type="text" name="username" id="username" value="{{account.username}}" class="input_style" />
                 </div>
             </div>
             <!-- ------------- -->
